@@ -1,8 +1,6 @@
 package dev.smartdata.runteam.app;
 
-import io.jmix.core.Entity;
 import io.jmix.core.Metadata;
-import io.jmix.core.metamodel.model.MetaProperty;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import org.springframework.stereotype.Component;
@@ -13,12 +11,10 @@ import java.util.List;
 
 @Component("rt_JpqlTools")
 public class JpqlTools {
-    private final Metadata metadata;
     @PersistenceContext
     protected EntityManager entityManager;
 
     public JpqlTools(Metadata metadata) {
-        this.metadata = metadata;
     }
 
     @SuppressWarnings("rawtypes")
@@ -28,7 +24,7 @@ public class JpqlTools {
         List one = entityManager.createQuery(query).setMaxResults(1).getResultList();
         if (one.isEmpty())
             throw new Exception("No results");
-        Object oneObject = one.getFirst();
+        Object oneObject = one.get(0);
         if (oneObject instanceof Object[]) {
             Object[] array = (Object[]) oneObject;
             for (Object element : array) {
